# PG-Bank-API

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/dev-diary/: development-diary.md
docs/reverse-engineering/: 01-tools-and-setup.md  02-intercepting-requests.md  03-decrypting-payloads.md  04-flow-diagrams.md  05-educational-notes.md
docs/superpowers/plans/: 2026-06-23-pgbank-unofficial-phase-1.md  2026-06-23-pgbank-unofficial-phase-2-to-6.md  2026-06-23-pgbank-unofficial-phase-7-to-9.md
docs/superpowers/specs/: 2026-06-23-pgbank-unofficial-design.md
openspec/specs/pgbank-unofficial/: spec.md
scratch/: change_password_back.py  check_session.py  confirm_login_otp.py  find_browser_id.py  login_step1_new_account.py  pending_otp_new_account.json  probe_confirm_keys.py  probe_password.py  test_contacts.py  test_history.py  test_live_contacts.py  test_login.py  test_receiver.py  test_session.json  test_session_new_account.json  verify_login_reverted.py
src/pgbank_unofficial/: __init__.py  _algorithm.py  _params.py  async_client.py  cli.py  client.py  exceptions.py  history.py  http.py  manager.py  models.py  poller.py  scheduler.py  storage.py  vietqr.py  webhook.py
tests/: conftest.py  test_algorithm.py  test_async_client.py  test_cli.py  test_client.py  test_exceptions.py  test_history.py  test_http.py  test_manager_storage.py  test_models.py  test_poller.py  test_public_api.py  test_scheduler.py  test_storage.py  test_vietqr.py  test_webhook.py
